--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/FrancoisVongue/fp-way"
+        "url": "https://github.com/FrancoisVongue/mapter"
     },
     "keywords": [
         "fp",
-        "lambda",
-        "functional-programming",
-        "function",
-        "pure"
+        "mapper",
+        "dto",
+        "object",
+        "ddd",
+        "hexagonal",
+        "hexagonal architecture"
     ],
     "author": "Francois Vongue",
     "license": "MIT",
@@ -33,5 +35,7 @@
         "ts-jest": "^26.3.0",
         "typescript": "^4.5.5"
     },
-    "dependencies": {}
+    "dependencies": {
+        "fp-way-core": "^0.1.1"
+    }
 }
