--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mapter",
+    "name": "easymapper",
     "version": "0.0.0",
     "description": "Data mapping utility",
     "main": "lib/index.js",
@@ -30,12 +30,12 @@
     "author": "Francois Vongue",
     "license": "MIT",
     "devDependencies": {
-        "@types/jest": "^26.0.13",
-        "jest": "^26.4.2",
-        "ts-jest": "^26.3.0",
-        "typescript": "^4.5.5"
+        "@types/jest": "^26.0.24",
+        "jest": "^26.6.3",
+        "ts-jest": "^26.5.6",
+        "typescript": "^4.6.2"
     },
     "dependencies": {
-        "fp-way-core": "^0.1.1"
+        "fp-way-core": "^0.1.4"
     }
 }
